v6.5.1: Fixed: Unable to scroll Options page on smaller screens

--- a/options/css/options.css
+++ b/options/css/options.css
@@ -26,3 +26,17 @@ label {
   line-height: 2;
   margin-left: 10px;
 }
+
+@media ( max-width: 450px ) { /* To not affect Opera standalone page style */
+  html {
+    height: 450px;
+    overflow-y: hidden;
+  }
+  body {
+    margin: 0;
+    padding: 14px 17px; /* Chrome defaults for margin */
+    height: 450px;
+    max-height: calc( 100vh - 2 * 14px );
+    overflow-y: scroll;
+  }
+}
